[gd_scene load_steps=7 format=3 uid="uid://iglrdadxsqw4"]

[ext_resource type="Material" uid="uid://mu4iyylnwc38" path="res://game/Wall/wall_new2.material" id="1"]
[ext_resource type="Script" path="res://game/Wall/Wall.gd" id="2"]

[sub_resource type="BoxMesh" id="1"]
resource_local_to_scene = true

[sub_resource type="BoxShape3D" id="2"]
resource_local_to_scene = true

[sub_resource type="Animation" id="3"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0883885, 1),
"update": 0,
"values": [Vector3(1, 0.1, 1), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wf5pt"]
_data = {
"Spawn": SubResource("3")
}

[node name="Wall" type="Node3D" groups=["wall"]]
script = ExtResource("2")

[node name="WallMeshOrientation" type="Node3D" parent="."]

[node name="WallMesh" type="MeshInstance3D" parent="WallMeshOrientation"]
material_override = ExtResource("1")
mesh = SubResource("1")

[node name="WallArea" type="Area3D" parent="WallMeshOrientation" groups=["wall"]]
collision_mask = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallMeshOrientation/WallArea"]
shape = SubResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../WallMeshOrientation")
libraries = {
"": SubResource("AnimationLibrary_wf5pt")
}
